--- a/src/categorias/styleCategoria.css
+++ b/src/categorias/styleCategoria.css
@@ -1,18 +1,21 @@
 
 .produtos {
-     display: flex; 
+    display: flex; 
+    flex-wrap: wrap; 
      gap: 2rem; justify-content: center; 
-     flex-wrap: wrap; 
      padding: 2rem;
 }
 
 .card { 
     border: 1px solid #ccc; 
     padding: 1rem; 
-    width: 200px; 
-    text-align: center; 
+    width: 200px; ;
+    text-align: center;
+    border-radius: 8px; 
 }
 
 .card img { 
     width: 100%; 
+    height: auto;
+    border-radius: 8px;
 }
