--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -11,7 +11,7 @@
     <div class="logo">ÁGUA DOCE BOUTIQUE</div>
     <nav class="menu">
       <a href="{{ url_for('routes.feminino') }}">Feminino</a>
-      <a href="{{ url_for('routes.masculino') }}">routes.Masculino</a>
+      <a href="{{ url_for('routes.masculino') }}">Masculino</a>
       <a href="{{ url_for('routes.sobre') }}">Sobre</a>
       <a href="{{ url_for('routes.contato') }}">Contato</a>
     </nav>
