--- a/backend/templates/categorias/feminino/camisas_fem.html
+++ b/backend/templates/categorias/feminino/camisas_fem.html
@@ -1,30 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nome da Página</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/style.css') }}"
+    />
+  </head>
+  <body>
     <header class="navbar">
-        <div class="logo">ÁGUA DOCE BOUTIQUE</div>
-        <nav class="menu">
-            <a href="{{ url_for('routes.index') }}">Home</a>
-            <a href="{{ url_for('routes.feminino') }}">Feminino</a>
-            <a href="{{ url_for('routes.masculino') }}">Masculino</a>
-            <a href="{{ url_for('routes.sobre') }}">Sobre</a>
-            <a href="{{ url_for('routes.contato') }}">Contato</a>
-        </nav>
+      <div class="logo">ÁGUA DOCE BOUTIQUE</div>
+      <nav class="menu">
+        <a href="{{ url_for('routes.index') }}">Home</a>
+        <a href="{{ url_for('routes.feminino') }}">Feminino</a>
+        <a href="{{ url_for('routes.masculino') }}">Masculino</a>
+        <a href="{{ url_for('routes.sobre') }}">Sobre</a>
+        <a href="{{ url_for('routes.contato') }}">Contato</a>
+      </nav>
     </header>
 
     <section class="hero">
-        <!-- Conteúdo da página aqui -->
+      <div class="hero-content">
+        <h1>Bem-vindo à Água Doce Boutique</h1>
+        <p>Encontre peças únicas com estilo e conforto.</p>
+      </div>
     </section>
 
     <footer class="footer">
-        <p>&copy; 2025 Água Doce Boutique. Todos os direitos reservados.</p>
-        <h5>Água Doce Boutique. Rua Frâncisco Cândido de Souza, 43, Nova Resende - MG</h5>
+      <p>&copy; 2025 Água Doce Boutique. Todos os direitos reservados.</p>
+      <h5>
+        Água Doce Boutique. Rua Frâncisco Cândido de Souza, 43, Nova Resende -
+        MG
+      </h5>
     </footer>
-</body>
+  </body>
 </html>
