--- a/backend/templates/categorias/masculino/casaco-jaqueta.html
+++ b/backend/templates/categorias/masculino/casaco-jaqueta.html
@@ -1,32 +1,53 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='styleCategoria.css') }}" />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/style.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='styleCategoria.css') }}"
+    />
     <title>Casacos - Jaquetas</title>
-</head>
-<body>
+  </head>
+  <body>
     <header class="navbar">
-        <div class="logo">ÁGUA DOCE BOUTIQUE</div>
-        <nav class="menu">
-          <a href="{{ url_for('routes.index') }}">Home</a>
-          <a href="{{ url_for('routes.feminino') }}">Feminino</a>
-          <a href="{{ url_for('routes.masculino') }}">Masculino</a>
-          <a href="{{ url_for('routes.sobre') }}">Sobre</a>
-          <a href="{{ url_for('routes.contato') }}">Contato</a>
-        </nav>
+      <div class="logo">ÁGUA DOCE BOUTIQUE</div>
+      <nav class="menu">
+        <a href="{{ url_for('routes.index') }}">Home</a>
+        <a href="{{ url_for('routes.feminino') }}">Feminino</a>
+        <a href="{{ url_for('routes.masculino') }}">Masculino</a>
+        <a href="{{ url_for('routes.sobre') }}">Sobre</a>
+        <a href="{{ url_for('routes.contato') }}">Contato</a>
+      </nav>
     </header>
 
     <section class="hero">
-        <section class="produtos" id="produtos-container"></section>
-        <script src="{{ url_for('static', filename='js/loadProducts.js') }}"></script>
+      <div class="hero-content">
+        <img
+          src="{{ url_for('static', filename='imagens/casacos_jaquetas_masc/produto1.jpg') }}"
+          alt="Casacos e Jaquetas Masculinos"
+          class="hero-img"
+        />
+        <div class="hero-text">
+          <h1>Casacos & Jaquetas</h1>
+          <p>
+            Encontre a combinação perfeita de estilo e proteção para o clima
+            frio.
+          </p>
+        </div>
+      </div>
     </section>
 
     <footer class="footer">
       <p>&copy; 2025 Água Doce Boutique. Todos os direitos reservados.</p>
-      <h5>Água Doce Boutique. Rua Frâncisco Cândido de Souza, 43, Nova Resende - MG</h5>
+      <h5>
+        Água Doce Boutique. Rua Frâncisco Cândido de Souza, 43, Nova Resende -
+        MG
+      </h5>
     </footer>
-</body>
+  </body>
 </html>
