--- a/backend/templates/contato.html
+++ b/backend/templates/contato.html
@@ -1,30 +1,36 @@
 <!-- templates/contato.html -->
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <title>Contato</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-</head>
-<body>
-  <header class="navbar">
-    <div class="logo">ÁGUA DOCE BOUTIQUE</div>
-    <nav class="menu">
-      <a href="{{ url_for('home') }}">Home</a>
-      <a href="{{ url_for('feminino') }}">Feminino</a>
-      <a href="{{ url_for('masculino') }}">Masculino</a>
-      <a href="{{ url_for('sobre') }}">Sobre</a>
-      <a href="{{ url_for('contato') }}">Contato</a>
-    </nav>
-  </header>
-  <section class="hero">
-    <h1>Fale Conosco</h1>
-    <p>Email: contato@aguadoce.com.br</p>
-  </section>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Contato</title>
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/style.css') }}"
+    />
+  </head>
+  <body>
+    <header class="navbar">
+      <div class="logo">ÁGUA DOCE BOUTIQUE</div>
+      <nav class="menu">
+        <a href="{{ url_for('routes.home') }}">Home</a>
+        <a href="{{ url_for('routes.feminino') }}">Feminino</a>
+        <a href="{{ url_for('routes.masculino') }}">Masculino</a>
+        <a href="{{ url_for('routes.sobre') }}">Sobre</a>
+        <a href="{{ url_for('routes.contato') }}">Contato</a>
+      </nav>
+    </header>
+    <section class="hero">
+      <h1>Fale Conosco</h1>
+      <p>Email: contato@aguadoce.com.br</p>
+    </section>
 
-  <footer class="footer">
-    <p>&copy; 2025 Água Doce Boutique. Todos os direitos reservados.</p>
-    <h5>Água Doce Boutique. Rua Frâncisco Cândido de Souza, 43, Nova Resende - MG</h5>
-  </footer>
-</body>
+    <footer class="footer">
+      <p>&copy; 2025 Água Doce Boutique. Todos os direitos reservados.</p>
+      <h5>
+        Água Doce Boutique. Rua Frâncisco Cândido de Souza, 43, Nova Resende -
+        MG
+      </h5>
+    </footer>
+  </body>
 </html>
