--- a/backend/templates/contato.html
+++ b/backend/templates/contato.html
@@ -13,7 +13,7 @@
     <header class="navbar">
       <div class="logo">ÁGUA DOCE BOUTIQUE</div>
       <nav class="menu">
-        <a href="{{ url_for('routes.home') }}">Home</a>
+        <a href="{{ url_for('routes.index') }}">Home</a>
         <a href="{{ url_for('routes.feminino') }}">Feminino</a>
         <a href="{{ url_for('routes.masculino') }}">Masculino</a>
         <a href="{{ url_for('routes.sobre') }}">Sobre</a>
